Use GeometryMapper for DataTransfer::ClipByVisualViewport

This patch rewrites DataTransfer::ClipByVisualViewport using
GeometryMapper which maps from the root transform space to
a given LocalFrameView's space with and without root layer
scrolling.

All other callsites of LocalFrameView::RootFrameToContents
(and similar) should also be audited because "Contents"
does not include scroll offset when root layer scrolling
is enabled.

The main change in this patch is the implementation of
DataTransfer::ClipByVisualViewport. The following additional
refactoring was included:
* ObjectPaintProperties::ContentsProperties has been
deleted because there were no implementations.
* LocalFrameView's total property tree state for contents is
now only set when root layer scrolling is not enabled, and has
been renamed "property_tree_state_for_contents".
* LocalFrameView::ScrolledContentsProperties has been added
which returns the contents properties for both RLS and !RLS.

Bug: 769490
Change-Id: I64a839c385fb4846ce6d69fbf366d8ff9fa9988f