third_party/WebKit/Source/core/paint/FramePainter.cpp
@@ -62,19 +62,17 @@ void FramePainter::Paint(GraphicsContext& context,
   if (should_paint_contents) {
     // TODO(pdr): Creating frame paint properties here will not be needed once
     // settings()->rootLayerScrolls() is enabled.
-    // TODO(pdr): Make this conditional on the rootLayerScrolls setting.
+    // TODO(pdr): Make this conditional on !RootLayerScrollingEnabled.
     Optional<ScopedPaintChunkProperties> scoped_paint_chunk_properties;
     if (RuntimeEnabledFeatures::SlimmingPaintV175Enabled() &&
         !RuntimeEnabledFeatures::RootLayerScrollingEnabled()) {
-      if (const PropertyTreeState* contents_state =
-              frame_view_->TotalPropertyTreeStateForContents()) {
-        PaintChunkProperties properties(
-            context.GetPaintController().CurrentPaintChunkProperties());
-        properties.property_tree_state = *contents_state;
-        scoped_paint_chunk_properties.emplace(context.GetPaintController(),
-                                              *GetFrameView().GetLayoutView(),
-                                              properties);
-      }
+      PaintChunkProperties properties(
+          context.GetPaintController().CurrentPaintChunkProperties());
+      properties.property_tree_state =
+          frame_view_->ScrolledContentsProperties();
+      scoped_paint_chunk_properties.emplace(context.GetPaintController(),
+                                            *GetFrameView().GetLayoutView(),
+                                            properties);
     }
 
     TransformRecorder transform_recorder(
@@ -105,22 +103,20 @@ void FramePainter::Paint(GraphicsContext& context,
 
     Optional<ScopedPaintChunkProperties> scoped_paint_chunk_properties;
     if (RuntimeEnabledFeatures::SlimmingPaintV175Enabled()) {
-      if (const PropertyTreeState* contents_state =
-              frame_view_->TotalPropertyTreeStateForContents()) {
-        // The scrollbar's property nodes are similar to the frame view's
-        // contents state but we want to exclude the content-specific
-        // properties. This prevents the scrollbars from scrolling, for example.
-        PaintChunkProperties properties(
-            context.GetPaintController().CurrentPaintChunkProperties());
-        properties.property_tree_state.SetTransform(
-            frame_view_->PreTranslation());
-        properties.property_tree_state.SetClip(
-            frame_view_->ContentClip()->Parent());
-        properties.property_tree_state.SetEffect(contents_state->Effect());
-        scoped_paint_chunk_properties.emplace(context.GetPaintController(),
-                                              *GetFrameView().GetLayoutView(),
-                                              properties);
-      }
+      // The scrollbar's property nodes are similar to the frame view's
+      // contents state but we want to exclude the content-specific
+      // properties. This prevents the scrollbars from scrolling, for example.
+      PaintChunkProperties properties(
+          context.GetPaintController().CurrentPaintChunkProperties());
+      properties.property_tree_state.SetTransform(
+          frame_view_->PreTranslation());
+      properties.property_tree_state.SetClip(
+          frame_view_->ContentClip()->Parent());
+      const auto& contents_state = frame_view_->ScrolledContentsProperties();
+      properties.property_tree_state.SetEffect(contents_state.Effect());
+      scoped_paint_chunk_properties.emplace(context.GetPaintController(),
+                                            *GetFrameView().GetLayoutView(),
+                                            properties);
     }
 
     TransformRecorder transform_recorder(
