third_party/WebKit/Source/core/paint/ObjectPaintProperties.h
@@ -54,7 +54,7 @@ class CORE_EXPORT ObjectPaintProperties {
   //     |                                This is the local border box space.
   //     +---[ perspective ]              The space created by CSS perspective.
   //     |   +---[ svgLocalToBorderBoxTransform ] Additional transform for
-  //                                      children of the outermost root SVG.
+  //     |                                children of the outermost root SVG.
   //     |              OR                (SVG does not support scrolling.)
   //     |   +---[ scrollTranslation ]    The space created by overflow clip.
   //     +---[ scrollbarPaintOffset ]     TODO(trchen): Remove this once we bake
@@ -138,14 +138,6 @@ class CORE_EXPORT ObjectPaintProperties {
   const ClipPaintPropertyNode* OverflowClip() const {
     return overflow_clip_.get();
   }
-
-  // This is the complete set of property nodes that can be used to paint the
-  // contents of this object. It is similar to the local border box properties
-  // but also includes properties (e.g., overflow clip, scroll translation) that
-  // apply to an object's contents.
-  static std::unique_ptr<PropertyTreeState> ContentsProperties(
-      PropertyTreeState* local_border_box_properties,
-      ObjectPaintProperties*);
 
   // The following clear* functions return true if the property tree structure
   // changes (an existing node was deleted), and false otherwise. See the
